# setu-free-your-data

./: README.md
docs/: aa-bad-restaurant.json  aa-good-restaurant.json  aa-wholesaler-1.json  aa-wholesaler-2.json  insert-user-n-all.edgeql  story.md
easyLedger/: build.gradle  settings.gradle
easyLedger/app/: build.gradle  google-services.json  proguard-rules.pro
easyLedger/app/release/: output-metadata.json
easyLedger/app/src/main/: AndroidManifest.xml
easyLedger/app/src/main/res/drawable/: ic_cashbook.xml
easyLedger/app/src/main/res/values/: strings.xml  themes.xml
easyLedger/app/src/main/res/values-night/: themes.xml
easyLedger/buildSrc/src/main/java/dependencies/: AndroidX.kt  Square.kt  Versions.kt
easyLedger/gradle/wrapper/: gradle-wrapper.properties
server/: .gitignore  pyproject.toml
server/app/: edb.py  main.py
server/app/api/: __init__.py  company.py  consent.py  login.py  notification.py
server/app/db/crud/: __init__.py  aa.py  company.py  users.py
server/app/middleware/: auth.py  config.py  consent_notification.py  local_file.py  security.py
server/app/middleware/schema/: Consent.py  Notification.py  aaaccount.py  authentication.py  base.py  company.py  fi_data.py  response.py  users.py
server/app/middleware/utils/: consent_detail.py  decrypt_data.py  request_data.py  request_signing.py
server/app/server/: custom_logger.py  uvicorn_server.py
server/dbschema/: default.esdl
server/dbschema/migrations/: 00001.edgeql  00002.edgeql
server/scripts/init/: checkdb.py  load_demo_data.py
(+97 files in other folders)
